[project]
name = "twitter-analyzer"
version = "0.1.0"
description = "A tool for analyzing Twitter/X posts using browser-use"
requires-python = ">=3.12"

dependencies = [
    "browser-use>=0.1.34",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.3.1",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "*.py",
    "pyproject.toml",
]

[tool.rye]
managed = true
dev-dependencies = []
